// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GalleryPage renders correctly 1`] = `
<main>
  <header />
  <section
    className="section"
  >
    <div
      className="gallery container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          ref={null}
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {
                    "children": "HTML",
                  },
                  "type": "p",
                },
              }
            }
          />
          <hr />
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`GalleryPageTemplate renders GatsbyImage 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="gallery container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          ref={null}
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`GalleryPageTemplate renders content correctly 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="gallery container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          ref={null}
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`GalleryPageTemplate renders html content correctly 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="gallery container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          ref={null}
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {
                    "children": "HTML content",
                  },
                  "type": "p",
                },
              }
            }
          />
          <hr />
        </div>
        <div
          className="gallery__image col-lg-4 col-md-6 col-sm-12 col-12"
          data-cy="galleryImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;
